MDEV-36764: Unexpected collation when using json_table

Analysis:
The collation is hard coded.

Fix:
The table initially had system character set hardcoded. However,
a table field should derive character set and collation from
table and table should derive it from database. Hence made
necessary change to reflect that.